feat(rag): 查询改写(ADR-15) + LLM 重排管道，默认关闭按数据量灰度
- QueryRewriter: 检索前改写+词表对齐扩展，口语表述映射到知识库常用词
- rag/rerank: DocumentReranker 接口 / LlmDocumentReranker（主线模型打分，
  失败回退原序）/ RerankDocumentPostProcessor，RAG 命中后 postretrieval 重排
- ParentChildDocumentRetriever/PgVectorVectorStoreConfig: 接入重排管道，
  检索窗口 topN=50 重排取 topK=5（开启时）
- application 层默认关闭，配置样例见 yml 注释；Golden Set 基线
  docs/phase5-rerank/golden-set-baseline-2026-08-28.md
- 单测: LlmDocumentRerankerTest（降级/排序/参数边界）